fix(web): fixed inputs on mobile devices

--- a/frontend/assets/scss/base/_global.scss
+++ b/frontend/assets/scss/base/_global.scss
@@ -10,6 +10,7 @@
 html {
   -webkit-text-size-adjust: 100%;
   scroll-behavior: smooth;
+  scroll-padding-top: var(--header-h, rem(80));
 }
 
 img,
@@ -59,6 +60,7 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  min-height: 100dvh;
 }
 
 .main {
